@@ -267,6 +267,14 @@
 							</config>
 						</TCEforms>
 					</hideFields>
+					<hideCanceledEvents>
+						<TCEforms>
+							<label>LLL:EXT:seminars/pi1/locallang.php:seminars.pi_flexform.hideCanceledEvents</label>
+							<config>
+								<type>check</type>
+							</config>
+						</TCEforms>
+					</hideCanceledEvents>
 					<generalPriceInList>
 						<TCEforms>
 							<label>LLL:EXT:seminars/pi1/locallang.php:seminars.pi_flexform.generalPriceInList</label>
